--- a/index-haml.html
+++ b/index-haml.html
@@ -13,7 +13,9 @@
           <ul>
             <li data-id='about'>About</li>
             <li data-id='seasons'>Seasons</li>
-            <li data-id='characters'>Characters</li>
+            <li data-id='characters'>
+              <a href='characters.html'>Characters</a>
+            </li>
           </ul>
         </nav>
         <video autoplay loop>
@@ -22,6 +24,64 @@
         </video>
         <img alt='Vikings on History' class='wallpaper' src='images/vikings-promo.jpg'>
       </section>
+      <section class='content-container about'>
+        <h2>About</h2>
+        <p>Axes the kracken longship horns horns loot bork bork bork longship Leif Erikson. Lack the table sea loot boats longship, Leif Erikson swords viking the kracken terror loot. Sea boats swords skald lack the table ocean skald scandinavia. Horns loot sailing, lack the table scandinavia bjorn the chair ikea axes bork bork bork ocean. Sailing skald berserker scandinavia sea loot tall blond women loot sailing. Swords lack the table Beowulf bork bork bork axes Beowulf, Leif Erikson bjorn the chair Leif Erikson axes lack the table. Bork bork bork Beowulf skald raiding scandinavia longship Beowulf sailing. Scandinavia ocean swords tall blond women Leif Erikson swords axes. Sailing lack the table sailing axes ocean Leif Erikson scandinavia horns viking.</p>
+        <p>Scandinavia sea scandinavia longship ikea skald Leif Erikson, raiding raiding axes viking skald. The kracken swords axes berserker axes, loot tall blond women Beowulf bork bork bork viking horns bjorn the chair sailing the kracken. Lack the table boats horns lack the table scandinavia terror terror, Leif Erikson ocean ocean ikea loot the kracken.</p>
+      </section>
+      <section class='content-container seasons'>
+        <h2>
+          Seasons
+          <span data-id='season-1'>Season 1 -</span>
+          <span data-id='season-2'>Season 2 -</span>
+          <span data-id='season-3'>Season 3 -</span>
+          <span data-id='season-4'>Season 4</span>
+        </h2>
+        <p class='season-1 active'>
+          Ragnar (Travis Fimmel) is a young Viking warrior who longs to discover civilizations across the seas. With his friend, the gifted craftsman Floki (Gustaf Skarsgård), he builds a new generation of faster longships and challenges the local ruler, Earl Haraldson (Gabriel Byrne), a man of little vision, to allow raids into unexplored North East England. He is supported by his brother Rollo (Clive Standen), who covets Ragnar's wife, the shieldmaiden Lagertha (Katheryn Winnick). Ragnar succeeds in carrying out the first Viking raids into the English kingdom of Northumbria, returning with rich loot and the monk Athelstan (George Blagden) as a slave. This not only earns him the enmity of King Aelle (Ivan Kaye), but triggers a series of increasingly violent confrontations at home with the autocratic Earl, ending with Ragnar killing and succeeding him.
+        </p>
+        <p class='season-2 active'>
+          King Horik is now at war with Jarl Borg who is accompanied by Rollo. Rollo, now bitter and enraged, rampages through battle killing and wounding many of his kin but cannot fight his brother when faced and surrenders to him. In a stalemate, Ragnar, Horik and Jarl Borg come to an agreement and decide to raid as a single force. Rollo, now ostracized by his kin for his betrayal awaits death by trial but is spared by a judge bribed by Ragnar. Princess Aslaug makes her way to Ragnar's kingdom now pregnant with Ragnar's child. Humiliated, Lagertha leaves Ragnar along with their remaining son Bjorn. Four years pass: Aslaug is now ruling with Ragnar and raising their sons. Rollo has faded away into obscurity and self-destruction because of shame but is forgiven by Ragnar although excluded from the raid. Floki has finished ship building and Horik has now decided to exclude Jarl Borg from the raid for personal reasons. Ragnar tells Jarl Borg of the decision and he leaves angry and slighted. A storm throws the raid off course and lands the Viking horde in Wessex which is ruled by the King Ecbert of Wessex (Linus Roache). The Vikings begin to plunder the countryside and Athelstan, who has now been integrated into the Vikings and has joined them on the raid, finds it hard to fully embrace Viking brutality and is deeply troubled.
+        </p>
+        <p class='season-3 active'>
+          The raiding party explores the new world that has come to their knowledge after the raids of Season 2. While Ragnar deals with his new role as King, his son Bjorn, ex-wife Lagertha (now Earl Ingstad), Princess Aslaug, and his brother Rollo have to face their challenges in love, leadership and personal life. But Ragnar better watch his back from King Ecbert, the wise and ruthless ruler of Wessex, who—notwithstanding the promise of a lasting friendship—might threaten his plans of peace and plenty. In the endless clash between religions, Floki grows even more suspicious of Athelstan, always torn between his God and the Norse Gods, making a call that might lead to a point of no return between him and Ragnar.
+        </p>
+        <p class='seasons-4 active'>
+          Ragnar and the Vikings have returned to Kattegat after raiding Paris. While Ragnar recovers from his wounds suffered in Paris, he meets a new slave, Yidu, whom he grows close to. He must also deal with Floki, who has been imprisoned by Bjorn for the murder of Athelstan. Bjorn also reveals to Ragnar that he intends to travel into the wilderness to find himself, but not before Kalf and Erlendur plot against him. Meanwhile, the Viking women have growing ambitions, as Lagertha and Aslaug both attempt to plot themselves back into power. In Paris, Rollo and the Franks prepare for the eventual return of Ragnar and his Viking warriors, and Rollo attempts to build a relationship with his new wife Princess Gisla. In Wessex, relationships are tense as Ecbert grows closer to Judith, while his son Aethelwulf forms a relationship with Queen Kwenthrith. Along with King Aelle, this alliance prepares to restore Kwenthrith to power in Mercia, while also keeping in mind the eventual return of Ragnar and the Vikings, whose settlement was slaughtered by Ecbert. King Harald Finehair arrives in Kattegat with his brother Halfdan, both eager to raid with Ragnar in Paris. However, Harald has desires to become the King of all Norway, but in doing so must overthrow Ragnar. Older, wounded, and lacking the desire to explore like his early years, Ragnar faces enemies on all sides.
+        </p>
+      </section>
+      <section class='content-container characters'>
+        <h2>Characters</h2>
+        <div class='characters-container'>
+          <div class='character'>
+            <img alt='Ragnar Lothbrok' src='images/ragnar.jpg'>
+            <h3>Ragnar Lothbrok</h3>
+            <p>The kracken swords axes berserker axes, loot tall blond women Beowulf bork bork bork viking horns bjorn the chair sailing the kracken. Lack the table boats horns lack the table scandinavia terror terror.</p>
+          </div>
+          <div class='character'>
+            <img alt='Lagertha' src='images/lagertha.jpg'>
+            <h3>Lagertha</h3>
+            <p>The kracken swords axes berserker axes, loot tall blond women Beowulf bork bork bork viking horns bjorn the chair sailing the kracken. Lack the table boats horns lack the table scandinavia terror terror.</p>
+          </div>
+          <div class='character'>
+            <img alt='Floki' src='images/floki.jpg'>
+            <h3>Floki</h3>
+            <p>The kracken swords axes berserker axes, loot tall blond women Beowulf bork bork bork viking horns bjorn the chair sailing the kracken. Lack the table boats horns lack the table scandinavia terror terror.</p>
+          </div>
+          <div class='character'>
+            <img alt='Athelstan' src='images/athelstan.jpg'>
+            <h3>Athelstan</h3>
+            <p>The kracken swords axes berserker axes, loot tall blond women Beowulf bork bork bork viking horns bjorn the chair sailing the kracken. Lack the table boats horns lack the table scandinavia terror terror.</p>
+          </div>
+          <div class='character'>
+            <img alt='Bjorn' src='images/bjorn.jpg'>
+            <h3>Bjorn</h3>
+            <p>The kracken swords axes berserker axes, loot tall blond women Beowulf bork bork bork viking horns bjorn the chair sailing the kracken. Lack the table boats horns lack the table scandinavia terror terror.</p>
+          </div>
+        </div>
+      </section>
     </div>
+    <script src='lib/js/vendor.min.js'></script>
+    <script src='lib/js/app.js'></script>
   </body>
 </html>
