--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
 
 <head>
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="lib/styles/main.min.css">
 </head>
 
-  
+
 <body>
     <div class="container">
         <section class="top-container">
@@ -67,4 +67,4 @@
     <script src="lib/js/app.js"></script>
 </body>
 
-</html>
+</html> -->
